tests/fixtures/projects/compilation-error/src/Program.cs
namespace CompilationErrorApplication;

internal static class Program
{
    private static void Main()
    {
    }
}
